more doc in READMEs